# VideoInsightAI

./: README.md
backend/: .gitignore  README.md  authenticate_youtube.py  pyproject.toml  ruff.toml
backend/app/: crud.py  database.py  main.py  schemas.py  services.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: VideoDetail.css  VideoDetail.tsx
frontend/src/pages/: VideoDetailPage.tsx
frontend/src/services/: api.ts
